# mycompiler

./: .gitignore  Cargo.toml  build.sh
mc/: Cargo.toml  build.sh  test.s
mc-lsp/: Cargo.toml  test.mclang
mc-lsp/src/: main.rs  server.rs
mc/src/: ast.rs  ir.rs  lib.rs  main.rs  parser.rs  tokenizer.rs
mc/src/compile/: mod.rs  regmap.rs
mc/src/compiler/: asmutil.rs  expression.rs  mod.rs  scope.rs
mc/test/: cfunc.c  test.mc  test.mclang
src/: compiler.rs  main.rs  parser.rs  tokenizer.rs
src/compiler/: asmutil.rs  expression.rs  mod.rs  regmap.rs  scope.rs
test/: cfunc.c  test.mc
