[package]
name = "mc-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
lsp-server = "0.7.8"
lsp-types = "0.97.0"
mc = { path = "../mc" }
serde = "1.0.219"
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-panic = "0.1.2"
tracing-subscriber = "0.3.19"
