[package]
name = "mc"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.11.0"
object = { version = "0.37.1", features = ["build"] }

# [lib]
# name = "mc"
# path = "src/lib.rs"

[[bin]]
name = "mc"
path = "src/main.rs"
